--- a/ReadMe
+++ b/ReadMe
@@ -1,4 +1,4 @@
 simpe Ecommerce that support  :
         product 
         Cart of products with ability to add return and see products inside
-        Customer with it's one Cart and his operations on it 
+        Customer with it's one Cart and his operations on it  , Check out  with shipping service if valid
